@@ -1,4 +1,8 @@
 2007-06-17  Isaiah Beerbower <ipaqah@tm.net>
+	* PQFontSampleView.m: Handles changing colors.
+	* PQSampleController.m: Handles changing colors.
+
+2007-06-17  Isaiah Beerbower <ipaqah@tm.net>
 	* PQFontSampleView.*: Only generates font sample if it needs to.
 	* PQSampleController.*: Remembers if fonts need updating or not.
 
